--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82f9e2">  <td>22/04/01 23:05:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchApplication(java.lang.String,java.lang.String)[pri:0, instance:com.org.testcase.LoginTest@77b14724]">&gt;&gt;LaunchApplication</td> 
-<td>&nbsp;</td>  <td>main@1441328175</td>   <td></td> </tr>
-<tr bgcolor="82f9e2">  <td>22/04/01 23:06:31</td>   <td>50621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.TearDown()[pri:0, instance:com.org.testcase.LoginTest@77b14724]">&lt;&lt;TearDown</td> 
-<td>&nbsp;</td>  <td>main@1441328175</td>   <td></td> </tr>
-<tr bgcolor="9368ac">  <td>22/04/01 23:06:31</td>   <td>50282</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login1(java.lang.Object)[pri:0, instance:com.org.testcase.LoginTest@77b14724]">login1</td> 
-  <td>main@1441328175</td>   <td></td> </tr>
+<tr bgcolor="7972d8">  <td>22/04/04 23:01:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.LaunchApplication(java.lang.String,java.lang.String)[pri:0, instance:com.org.testcase.LoginTest@2dbf4cbd]">&gt;&gt;LaunchApplication</td> 
+<td>&nbsp;</td>  <td>main@1917442783</td>   <td></td> </tr>
+<tr bgcolor="7972d8">  <td>22/04/04 23:02:54</td>   <td>65186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.TearDown()[pri:0, instance:com.org.testcase.LoginTest@2dbf4cbd]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td>  <td>main@1917442783</td>   <td></td> </tr>
+<tr bgcolor="6ef8ad">  <td>22/04/04 23:02:54</td>   <td>64908</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login1(java.lang.Object)[pri:0, instance:com.org.testcase.LoginTest@2dbf4cbd]">login1</td> 
+  <td>main@1917442783</td>   <td></td> </tr>
 </table>
