--- a/Reports/ExecutionReport_06-04-2022 23-07-06.html
+++ b/Reports/ExecutionReport_06-04-2022 23-07-06.html
@@ -48,7 +48,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">Apr 4, 2022 04:34:21 pm</span>
+                    <span class="badge badge-primary">Apr 6, 2022 11:07:06 pm</span>
                 </a>
             </li>
         </ul>
@@ -116,8 +116,8 @@
 					<div class="open-test">
 						<div class="test-detail">
 							<p class="name">login1</p>
-							<p class="duration text-sm">0h 0m 0s+237ms</p>
-							<span class="datetime">16:35:11 pm</span>
+							<p class="duration text-sm">0h 0m 0s+260ms</p>
+							<span class="datetime">23:08:03 pm</span>
 						</div>
 					</div>
 					<div class="test-contents d-none">
@@ -125,9 +125,9 @@
 							<div class="p-v-10 d-inline-block">
 								<div class="info">
 									<h5 class="test-status text-pass">login1</h5>
-									<span class='badge badge-success'>04.04.2022 16:35:11</span>
-									<span class='badge badge-danger'>04.04.2022 16:35:11</span>
-									<span class='badge badge-default'>0h 0m 0s+237ms</span>
+									<span class='badge badge-success'>04.06.2022 23:08:03</span>
+									<span class='badge badge-danger'>04.06.2022 23:08:04</span>
+									<span class='badge badge-default'>0h 0m 0s+260ms</span>
 								</div>
 								<div class="m-t-10 m-l-5">
 									
@@ -144,35 +144,35 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>4:35:11 pm</td>
+				<td>11:08:03 pm</td>
 				<td>
 						DSS App launched successfully
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>4:35:11 pm</td>
+				<td>11:08:04 pm</td>
 				<td>
 						UsernameFld ==> Stage_Multihotel26@yopmail.com is entered
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>4:35:11 pm</td>
+				<td>11:08:04 pm</td>
 				<td>
 						PasswordFld ==> Test@123 is entered
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>4:35:11 pm</td>
+				<td>11:08:04 pm</td>
 				<td>
 						Sign In Btn is clicked successfully
 				</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>4:35:11 pm</td>
+				<td>11:08:04 pm</td>
 				<td>
 						Test Case: login1is passed
 				</td>
@@ -272,7 +272,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Start</h6>
-							<h4 class="font-weight-light mt-4">Apr 4, 2022 04:34:21 pm</h4>
+							<h4 class="font-weight-light mt-4">Apr 6, 2022 11:07:06 pm</h4>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -288,7 +288,7 @@
 					<div class="media justify-content-between">
 						<div class="card-header">
 							<h6 class="card-title">Duration</h6>
-							<h4 class="font-weight-light mt-4">0h 0m 54s+407ms</h4>
+							<h4 class="font-weight-light mt-4">0h 1m 2s+248ms</h4>
 							<span class="text-semibold font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -314,6 +314,41 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="col-md-4">
+			<div class="card">
+				<div class="card-header">
+					<h6 class="card-title">Environment</h6>
+				</div>
+				<div class="table-overflow">
+					<table class="table table-sm">
+						<thead>
+							<tr class="bg-gray">
+								<th>Name</th>
+								<th>Value</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Executed on Environment</td>
+								<td>stg</td>
+							</tr>
+							<tr>
+								<td>Executed on Browser</td>
+								<td>chrome</td>
+							</tr>
+							<tr>
+								<td>Executed on OS</td>
+								<td>Windows 10</td>
+							</tr>
+							<tr>
+								<td>Executed by user</td>
+								<td>chandrra</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 <script>
@@ -360,7 +395,7 @@
 </script>
 <script>
 	var timeline = {
-	        "login1":0.237
+	        "login1":0.26
 	};
 </script>
                 </div>
