--- a/test-output/index.html
+++ b/test-output/index.html
@@ -147,6 +147,7 @@
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;com.org.commonUtils.ITestListenersManager&quot;/&gt;
+    &lt;listener class-name=&quot;com.org.listeners.TestRetryAnalyzerListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;parameter name=&quot;env&quot; value=&quot;stg&quot;/&gt;
@@ -196,12 +197,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'login1')
 data.setCell(0, 2, 'com.org.testcase.LoginTest')
-data.setCell(0, 3, 246);
+data.setCell(0, 3, 265);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 246 ms</span>
+              <span class="suite-total-time">Total running time: 265 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -234,11 +235,11 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">login1({UserName=Stage_Multihotel26@yopmail.com, Password=Test@123})</span>
-                <span class="method-start">50609 ms</span>
+                <span class="method-start">134265 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">50857 ms</span>
+                <span class="method-start">134532 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
